@@ -17,29 +17,5 @@ $this->menu=array(
 		Yii::t('app', 'Create'),
 		$this->modelClass); ?>
 
-<div class="form">
+<?php echo "<?php \$this->renderPartial('_form', array('model'=>\$model, 'buttons' => true)); ?>\n"; ?>
 
-<?php 
-$ajax = ($this->enable_ajax_validation) ? 'true' : 'false';
-echo "<?php \$form=\$this->beginWidget('CActiveForm', array(
-	'id'=>'".$this->class2id($this->modelClass)."-form',
-	'enableAjaxValidation'=>$ajax,
-)); \n"; 
-
-echo "echo \$this->renderPartial('_form', array(
-	'model'=>\$model,
-	'form' =>\$form
-	)); ?>\n"; ?>
-
-<div class="row buttons">
-	<?php echo '<?php
-	$url = array(Yii::app()->request->getQuery(\'returnTo\'));
-	if(empty($url[0])) 
-		$url = array(\''.strtolower($this->modelClass).'/admin\');';
-	echo "\necho CHtml::Button(Yii::t('app', 'Cancel'), array('submit' => \$url)); ?>&nbsp;\n"; 
-	 echo "<?php echo CHtml::submitButton(Yii::t('app', 'Create')); ?>\n"; ?>
-</div>
-
-<?php echo "<?php \$this->endWidget(); ?>\n"; ?>
-
-</div>
